# pmedm-legacy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_tests.sh
.ci/: py311_pmedm_legacy_latest.yml  py311_pmedm_legacy_min.yaml  py312_pmedm_legacy_dev.yaml  py312_pmedm_legacy_latest.yml
.github/workflows/: continuous_integration.yml
notebooks/: livelike_to_pmedmrcpp.ipynb  livelike_to_pmedmrcpp__batch.ipynb  toy_example.ipynb
pmedm_legacy/: __init__.py  diagnostics.py  parallel.py  pmedm.py
pmedm_legacy/tests/: conftest.py  test_diagnostics.py  test_pmedm_legacy.py
pmedm_legacy/tests/buildup_0100100/: README.md  almat.parquet  est_g1.parquet  est_g2.parquet  est_ind.parquet  g1.parquet  g2.parquet  se_g1.parquet  se_g2.parquet  wt.parquet
pmedm_legacy/tests/buildup_0100200/: README.md  almat.parquet  est_g1.parquet  est_g2.parquet  est_ind.parquet  g1.parquet  g2.parquet  se_g1.parquet  se_g2.parquet  wt.parquet
